--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,6 @@
     <h4 class="subtitle is-4">Description</h4><%= @post.description %>
     <br>
   </div>
-  <%= render 'posts/comments', post: @post %>
- 
+  <%= render 'posts/comments' %>
 </div>
 
