--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,14 +1,4 @@
-<%= form_with(model: [post, Comment.new]) do |form| %>
-  <% if post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
-      <% post.errors.each do |error| %>
-        <div class="alert alert-warning"><%= error.full_message %></div>
-      <% end %>
-    </div>
-  <% end %>
-    
+<%= form_with(model: [@post, @post.comments.build]) do |form| %>
   <br>
   <div class="form-group">
       <%= form.label :comment %>
