--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,6 @@
     <h4 class="subtitle is-4">Description</h4><%= @post.description %>
     <br>
   </div>
-  <%= render 'posts/comments' %>
+  <%= render 'posts/comments', comments: @comments %>
 </div>
 
