--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,13 @@
-<div id="<%= dom_id(comment)%>" class="box">
-  <div class="card" style="width: 100%;">
-    <div class="card-header">
-      Posted by <%= comment.user.name_full %> on <%=time_tag comment.created_at, "data-local": "time.ago" %>
+<% comments.each do |comment| %>
+  <div id="<%= dom_id(comment)%>" class="box">
+    <div class="card" style="width: 100%;">
+      <div class="card-header">
+        Posted by <%= comment.user.name_full %> on <%=time_tag comment.created_at, "data-local": "time.ago" %>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title"> <%= comment.description%> </h5>
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-title"> <%= comment.description%> </h5>
-    </div>
-  </div>
-</div>
+  </div>  
+<% end %>
+
