comment spec tests

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,7 +11,7 @@
     
   <br>
   <div class="form-group">
-      <%= form.label :comment %>
+      <%= form.label :description %>
       <%= form.text_area :description, class: "form-control" %>
   </div>
 
