--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -1,4 +1,8 @@
 <section>
-  <h5 class="subtitle is-5"> <strong> <%= comments.count %> </strong> Comments </h5>
+  <h5 class="subtitle is-5"> 
+    <strong> 
+      <%= comments.count %> 
+    </strong> Comments 
+  </h5>
   <%= render 'comments/show', comments: comments %>
 </section>
